--- a/_posts/2024-04-17-<test post>.md
+++ b/_posts/2024-04-17-<test post>.md
@@ -8,4 +8,4 @@ tags: [hello, ET, beer] #use lowercase, comma separated
 
 
 First post, trying out this Github hosting service
-<img src="/myfiles/IMG_8533.JPG" width="500" height="500">
+<img src="/myfiles/IMG_8533.JPG" width="500" height="500" alt="ET drinking a beer">
